# open-beheer

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  README.NL.rst  README.md  README.rst  SECURITY.rst  STAKEHOLDERS.md  docker-compose.yml  docker-nginx-default.conf  package-lock.json  pyproject.toml  pyright-ci-pyproject.toml  ruff.toml
.github/: README.rst
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-image.yml  ci.yml  code-quality.yml  codeql-analysis.yml
backend/: dotenv.dev.example  openbeheer-oas.yaml  pytest.ini  setup.cfg
backend/docker-services/keycloak/: Readme.md  docker-compose.yaml
backend/docker-services/keycloak/fixtures/: realm_export.json
backend/docker-services/objecttypen/: docker-compose.yml
backend/docker-services/objecttypen/setup_configuration/: data.yaml
backend/docker-services/openzaak/: Readme.md  docker-compose.yaml
backend/docker-services/openzaak/docker-init-open-zaak-db/: 0001-docker-init-db.sql  0002-extensions.sh
backend/docker-services/openzaak/fixtures/: authorisations.json  catalogi-resources.json  complex_relations.json  resultaattype_and_rollen.json  zaak_destruction_report.json  zaken.json
backend/docker-services/openzaak/nginx/: default.conf
backend/docs/: developers.rst  index.rst
backend/requirements/: base.in  base.txt  ci.txt  dev.in  dev.txt  test-tools.in  type-checking.in  type-checking.txt
backend/src/: manage.py
backend/src/openbeheer/: __init__.py  clients.py  conftest.py  helpers.py  setup.py  urls.py  wsgi.py
backend/src/openbeheer/accounts/: __init__.py  admin.py  apps.py  utils.py
backend/src/openbeheer/api/: apps.py  catalogi.py  exception_handler.py  oas.py  urls.py  views.py
backend/src/openbeheer/besluittypen/: constants.py  types.py  urls.py
backend/src/openbeheer/catalogi/: apps.py  schema.py  urls.py  views.py
backend/src/openbeheer/conf/: base.py  ci.py  dev.py  local_example.py
backend/src/openbeheer/config/: admin.py  health_checks.py  models.py
backend/src/openbeheer/eigenschappen/: constants.py  types.py  urls.py
backend/src/openbeheer/fixtures/: oidc.json
backend/src/openbeheer/health_checks/: checks.py  runner.py  types.py  utils.py
backend/src/openbeheer/informatieobjecttypen/: constants.py  types.py  urls.py
backend/src/openbeheer/resultaattypen/: constants.py  types.py  urls.py
backend/src/openbeheer/roltypen/: constants.py  types.py  urls.py
backend/src/openbeheer/services/: urls.py
backend/src/openbeheer/statustypen/: constants.py  types.py  urls.py
backend/src/openbeheer/templates/: master.html
backend/src/openbeheer/tests/: test_clients.py
backend/src/openbeheer/types/: __init__.py  _drf_spectacular.py  _oidc.py  _open_beheer.py  _zgw.py  _zrc.py  _ztc.py  objecttypen.py  selectielijst.py  test_ob_types.py  ztc.py
backend/src/openbeheer/utils/: __init__.py  apps.py  conftest.py  decorators.py  e2e.py  gherkin_e2e.py  migration_operations.py  mixins.py  pdf.py  validators.py  views.py
backend/src/openbeheer/zaakobjecttypen/: constants.py  types.py  urls.py
backend/src/openbeheer/zaaktype/: constants.py  types.py  urls.py  utils.py
backend/src/openbeheer/zaaktype_informatieobjecttypen/: types.py
backend/src/openbeheer/zaaktypeinformatieobjecttypen/: urls.py
backend/src/openbeheer/zaken/: urls.py  views.py
ci/: README.md
docs/: Makefile  conf.py  index.rst
docs/developers/: environment-variables.rst  health-checks.rst  index.rst  release-flow.rst  setup-local-environment.rst
docs/devops/: index.rst  setup-config.rst
docs/introduction/: team.rst
docs/introduction/open-source/: index.rst
docs/manual/: catalogus-selecteren.rst  index.rst  login.rst
docs/manual/informatieobjecttypen/: aanmaken.rst  bewerken.rst  overzicht.rst  publiceren.rst
docs/manual/zaaktypen/: aanmaken.rst  bewerken.rst  gerelateerde-objecten.rst  navigeren.rst  overzicht.rst  publiceren.rst
frontend/: .gitignore  .prettierignore  commitlint.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  typedoc.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
frontend/.husky/: commit-msg
frontend/.storybook/: main.ts  preview-body.html  preview.ts
frontend/rules/: py-endpoint.yaml  ts-endpoint.yaml
frontend/src/: App.test.tsx  App.tsx  main.css  main.test.ts  main.tsx  routes.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  catalogi.ts  index.ts  request.ts  service.ts  template.ts  types.d.ts  zaaktype.ts
frontend/src/api/hooks/: useChildRoutes.ts  useCurrentMatch.ts
frontend/src/components/: index.ts
frontend/src/components/Profile/: Profile.stories.tsx  Profile.tsx
frontend/src/components/VersionSelector/: VersionSelector.css  VersionSelector.stories.tsx  VersionSelector.tsx  index.ts
frontend/src/components/archiveform/: ArchiveForm.tsx  index.ts
frontend/src/components/profile/: Profile.stories.tsx  Profile.tsx
frontend/src/components/related/: RelatedObject.tsx  RelatedObjectBadge.css  RelatedObjectBadge.tsx  RelatedObjectDataGrid.tsx  index.ts
frontend/src/contexts/: OidcConfigContext.ts
frontend/src/fieldsets/: zaaktype.ts
frontend/src/fixtures/: catalogi.ts  index.ts  service.ts  template.ts  user.ts  versions.ts  zaaktype.ts  zaaktypen.ts
frontend/src/format/: formatUser.ts
frontend/src/hooks/: index.ts  useBreadcrumbItems.ts  useCatalogi.test.ts  useCatalogi.test.tsx  useCatalogi.ts  useCatalogi.tsx  useChildRoutes.ts  useCombinedSearchParams.test.ts  useCombinedSearchParams.ts  useCurrentMatch.ts  useDebounce.tsx  useErrors.ts  useHashParam.ts  useRoute.ts  useService.test.ts  useService.ts  useSubmitAction.test.ts  useSubmitAction.test.tsx  useSubmitAction.ts  useSubmitAction.tsx
frontend/src/lib/: index.ts
frontend/src/loaders/: loginRequired.loader.test.ts  loginRequired.loader.ts
frontend/src/pages/: index.ts
frontend/src/types/: api.d.ts  apiOverrides.ts  expand.d.ts  index.ts  selectielijst.d.ts  user.d.ts  zaaktype.d.ts
(+383 files in other folders)
